<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signUp">Don\'t have an account? Sign up here</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_events">Events</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_profile_h">פרופיל אישי</string>
    <string name="menu_calendar_h">לוח שנה</string>
    <string name="menu_events_h">אירועים</string>
    <string name="menu_tools_h">מצב אירוע</string>
    <string name="menu_share_h">שתף</string>
    <string name="menu_send_h">צור אירוע</string>
    <string name="more_info">עוד מידע</string>
    <string name="join_event">הירשם לאירוע</string>
    <string name="go_back">חזור</string>
    <string name="cancel_registration">ביטול הרשמה</string>
    <string name="LogOut">LogOut</string>
    <string name="share_event">שתף</string>

    <string-array name="Tshirt_size">
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>

</resources>
