<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile_h" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_events_h" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calendar_h" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools_h" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share_h" />
            <item
                android:id="@+id/nav_create_events"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send_h" />
        </menu>
    </item>

</menu>
