<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.profile.profileFragment"
        android:label="@string/menu_profile_h"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.myapplication.ui.events.eventsFragment"
        android:label="@string/menu_events_h"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.myapplication.ui.calendar.calendarFragment"
        android:label="@string/menu_calendar_h"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.myapplication.ui.tools.ToolsFragment"
        android:label="@string/menu_tools_h"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share_h"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_create_events"
        android:name="com.example.myapplication.ui.create_events.create_eventsFragment"
        android:label="@string/menu_send_h"
        tools:layout="@layout/fragment_create_events" />
</navigation>